# two-years

./: README.md  docker-compose.yml
aseprite/: alex-normal.aseprite  alex-profile-active.aseprite  alex-profile-inactive.aseprite  alex-profile.aseprite  alex.aseprite  bracelet.aseprite  dialogue-box.aseprite  flowers.aseprite  icecream.aseprite  level.aseprite  picnic-basket.aseprite  picnic-mat.aseprite  shark.aseprite  water-bottle.aseprite  wato-normal.aseprite  wato-profile-gray.aseprite  wato-profile.aseprite  wato.aseprite
backend/: Cargo.toml  Dockerfile
backend-old/: Cargo.toml
backend-old/src/: game.rs  main.rs
backend/ink/: game.ink  game.ink.json  test_dialogue_node.ink.json  test_question_node.ink  test_question_node.ink.json
backend/src/: game.rs  main.rs  payload.rs  player.rs  story.rs  types.rs
backend/src/tests/: mod.rs  test_game.rs  test_story.rs
backend/src/tests/fixtures/: test_chain.ink  test_chain.ink.json  test_dialogue_action.ink  test_dialogue_action.ink.json  test_dialogue_node.ink  test_dialogue_node.ink.json  test_interaction.ink  test_interaction.ink.json  test_question_node.ink  test_question_node.ink.json
frontend/: .cta.json  Dockerfile  index.html  package.json
frontend/public/: manifest.json
frontend/public/atlas/: alex.json  character.json  wato.json
frontend/src/: main.tsx  store.ts  styles.css
frontend/src/api/: constants.ts
frontend/src/components/: Game.tsx  animated-dots.tsx  choices.tsx  game.tsx  login.tsx  main.tsx  speaker.tsx  story.tsx  typewriter.tsx  waiting.tsx
frontend/src/css/: typewriter.css
(+38 files in other folders)
