[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
tokio = { version = "1.42.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
futures-util = "0.3"
serde_json = "1.0"
bladeink = "1.1.0"
tokio-tungstenite = "0.27.0"
